# api/docs/swagger.json
@@ -1466,13 +1466,13 @@
             }
         },
         "/history/message": {
-            "get": {
+            "put": {
                 "security": [
                     {
                         "ApiKeyAuth": []
                     }
                 ],
-                "description": "Get HistoryMessage Users List",
+                "description": "HistoryMessage Users",
                 "consumes": [
                     "application/json"
                 ],
@@ -1480,9 +1480,9 @@
                     "application/json"
                 ],
                 "tags": [
-                    "HistoryMessage"
+                    "UpdateHistoryRead"
                 ],
-                "summary": "Get HistoryMessage Users List",
+                "summary": "UpdateHistoryRead Users",
                 "parameters": [
                     {
                         "type": "string",
@@ -1504,7 +1504,7 @@
                                     "type": "object",
                                     "properties": {
                                         "data": {
-                                            "$ref": "#/definitions/coins_service.HistoryMessageResponse"
+                                            "type": "string"
                                         }
                                     }
                                 }
@@ -1548,14 +1548,16 @@
                         }
                     }
                 }
-            },
-            "put": {
+            }
+        },
+        "/history/message/{id}": {
+            "get": {
                 "security": [
                     {
                         "ApiKeyAuth": []
                     }
                 ],
-                "description": "HistoryMessage Users",
+                "description": "Get HistoryMessage Users List",
                 "consumes": [
                     "application/json"
                 ],
@@ -1563,9 +1565,9 @@
                     "application/json"
                 ],
                 "tags": [
-                    "UpdateHistoryRead"
+                    "HistoryMessage"
                 ],
-                "summary": "UpdateHistoryRead Users",
+                "summary": "Get HistoryMessage Users List",
                 "parameters": [
                     {
                         "type": "string",
@@ -1587,7 +1589,7 @@
                                     "type": "object",
                                     "properties": {
                                         "data": {
-                                            "type": "string"
+                                            "$ref": "#/definitions/coins_service.HistoryMessageResponse"
                                         }
                                     }
                                 }
